--- a/.github/workflows/marp-to-pages.yml
+++ b/.github/workflows/marp-to-pages.yml
@@ -26,6 +26,7 @@ jobs:
           git config --global user.name "kayoo123"
           git add docs/index.html
           git commit -m "Update index.html"
+          git push
 
   build_html:
     runs-on: ubuntu-latest
@@ -44,3 +45,4 @@ jobs:
           git config --global user.name "kayoo123"
           git add docs/*.html
           git commit -m "Update *.html"
+          git push
