--- a/.github/workflows/marp-to-pages.yml
+++ b/.github/workflows/marp-to-pages.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install MARP
       run: |
-        curl -L https://github.com/marp-team/marp-cli/releases/download/v2.3.0/marp-v2.3.0-linux-x86_64.tar.gz | tar xz
+        curl -L https://github.com/marp-team/marp-cli/releases/download/v2.3.0/marp-cli-v2.3.0-linux.tar.gz | tar xz
         sudo mv marp /usr/local/bin
     - name: Generate HTML & PDF
       run: |
