--- a/.github/workflows/marp-to-pages.yml
+++ b/.github/workflows/marp-to-pages.yml
@@ -15,8 +15,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Generate HTML
       run: |
+        sed -i "/item float-item/d" docs/index.html
         for input in docs/*.md; do
-          echo $input
+           sed -i -e "s|<!-- LIST -->|<!-- LIST -->\n<a href='${input%.*}.html'><li class='item float-item'>${input%.*}</li></a>|g" docs/index.html
         done
     - name: Commit index
       run: |
