--- a/.github/workflows/marp-to-pages.yml
+++ b/.github/workflows/marp-to-pages.yml
@@ -69,11 +69,11 @@ jobs:
     - name: Generate HTML
       run: |
         cd docs
-        marp --theme ./themes/*.css --html *.md
+        marp --allow-local-files --theme ./themes/*.css --html *.md
     - name: Generate PDF
       run: |
         cd docs
-        marp --theme ./themes/*.css --pdf *.md
+        marp --allow-local-files --theme ./themes/*.css --pdf *.md
     - name: Commit HTML & PDF
       run: |
         git config --local user.email "action@github.com"
